WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117726
Synthesized vertical italics on rotated glyphs are transformed incorrectly
https://bugs.webkit.org/show_bug.cgi?id=117726
Summary
Synthesized vertical italics on rotated glyphs are transformed incorrectly
Dean Jackson
Reported
2013-06-17 22:38:07 PDT
Created
attachment 204882
[details]
Test Case See the testcase. If a document is using vertical layout, and italics, and using a font that does not provide italic glyphs, then the synthesis of italics skews in the wrong direction. <
rdar://problem/12783606
>
Attachments
Test Case
(321 bytes, text/html)
2013-06-17 22:38 PDT
,
Dean Jackson
no flags
Details
Patch
(12.98 KB, patch)
2013-06-17 22:49 PDT
,
Dean Jackson
no flags
Details
Formatted Diff
Diff
Patch
(33.29 KB, patch)
2013-06-18 12:40 PDT
,
Dean Jackson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2013-06-17 22:49:31 PDT
Created
attachment 204883
[details]
Patch
Early Warning System Bot
Comment 2
2013-06-17 22:57:36 PDT
Comment on
attachment 204883
[details]
Patch
Attachment 204883
[details]
did not pass qt-ews (qt): Output:
http://webkit-queues.appspot.com/results/937247
Early Warning System Bot
Comment 3
2013-06-17 22:59:23 PDT
Comment on
attachment 204883
[details]
Patch
Attachment 204883
[details]
did not pass qt-wk2-ews (qt-wk2): Output:
http://webkit-queues.appspot.com/results/884197
Eric Carlson
Comment 4
2013-06-18 07:52:42 PDT
Comment on
attachment 204883
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=204883&action=review
> Source/WebCore/platform/graphics/FontGlyphs.cpp:207 > + RefPtr<SimpleFontData> nonItalicFontData = data.fontData->nonSyntheticItalicFontData(); > + GlyphPageTreeNode* nonItalicNode = GlyphPageTreeNode::getRootChild(nonItalicFontData.get(), pageNumber); > + GlyphPage* nonItalicPage = nonItalicNode->page();
Nit: these aren't used if page is NULL.
Dean Jackson
Comment 5
2013-06-18 10:05:33 PDT
(In reply to
comment #4
)
> (From update of
attachment 204883
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=204883&action=review
> > > Source/WebCore/platform/graphics/FontGlyphs.cpp:207 > > + RefPtr<SimpleFontData> nonItalicFontData = data.fontData->nonSyntheticItalicFontData(); > > + GlyphPageTreeNode* nonItalicNode = GlyphPageTreeNode::getRootChild(nonItalicFontData.get(), pageNumber); > > + GlyphPage* nonItalicPage = nonItalicNode->page(); > > Nit: these aren't used if page is NULL.
That was a typo. It should have been if (nonItalicPage). Thanks for noticing!
Enrica Casucci
Comment 6
2013-06-18 10:53:30 PDT
Comment on
attachment 204883
[details]
Patch Looks good to me, with the change Eric pointed out. I trust you to fix the 2 qt builds before landing the patch.
Dean Jackson
Comment 7
2013-06-18 12:40:25 PDT
Created
attachment 204932
[details]
Patch
Dean Jackson
Comment 8
2013-06-18 13:30:33 PDT
Committed
r151693
: <
http://trac.webkit.org/changeset/151693
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug